# ai-code-explain

./: .env.example  .gitignore  README.md  pyproject.toml
.github/: plan.instructions.md
e2e_tests/: 01_python_syntax_errors.py  02_python_security_vulns.py  03_js_bad_patterns.js  04_python_logic_smells.py  05_python_needs_optimization.py  06_python_bubble_sort.py  07_python_optimized_closest_pair.py  08_c_unoptimized.c  09_nonsense_input.txt
e2e_tests/sandbox/: db_helpers.py  main_with_imports.py  utils.py
e2e_tests_commented/: 01_python_syntax_errors.py  02_python_security_vulns.py  03_js_bad_patterns.js  04_python_logic_smells.py  05_python_needs_optimization.py  06_python_bubble_sort.py  07_python_optimized_closest_pair.py  08_c_unoptimized.c  09_nonsense_input.txt
e2e_tests_commented/sandbox/: db_helpers.py  main_with_imports.py  utils.py
src/ai_code_explain/: __init__.py  database.py  diff_generator.py  llm_gateway.py  local_context.py  main.py  models.py  pipeline.py  semgrep_runner.py
src/ai_code_explain/analyzers/: __init__.py  dispatcher.py  js_analyzer.py  python_analyzer.py
src/ai_code_explain/ui/: __init__.py  app.py
tests/: conftest.py  test_database.py  test_diff_generator.py  test_dispatcher.py  test_js_analyzer.py  test_llm_gateway.py  test_local_context.py  test_models.py  test_pipeline.py  test_python_analyzer.py  test_semgrep_runner.py
