[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-code-explain"
version = "0.1.0"
description = "Python/JavaScript code analysis tool with LLM-assisted semantic reasoning"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.59.0",
    "rich>=13.7.0",
    "sqlmodel>=0.0.16",
    "openai>=1.30.0",          # OpenAI-compatible client for OpenRouter
    "tree-sitter>=0.21.3",
    "tree-sitter-javascript>=0.21.0",
    "semgrep>=1.75.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
code-explain = "ai_code_explain.main:run"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
tui = [
    "tree-sitter-python>=0.21.0",  # syntax highlighting in the TUI TextArea; falls back to plain text if absent
]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=ai_code_explain --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
source = ["src/ai_code_explain"]
omit = ["src/ai_code_explain/ui/*", "src/ai_code_explain/main.py"]   # UI requires a display; main.py is a thin CLI entry point

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "except ImportError",
    "except Exception",            # broad catch-alls for graceful degradation
]
